# awesomecalculator

./: .gitignore  pyproject.toml
.github/workflows/: build-pipeline.yml
src/: setup.py
